# GreenMind

./: .gitignore  Dockerfile  Readme.md  aks-ingress-tls.crt  aks-ingress-tls.key  aks-ingress-tls.pfx  analysisService-deployment.yaml  analysisService-service.yaml  authenticationService-deployment.yaml  authenticationService-service.yaml  build.py  coredns-config.yaml  coredns-deployment.yaml  dataQuering-deployment.yaml  depl.py  deploy.py  fastapi-app1-deployment.yaml  fastapi-app1-service.yaml  fastapi-app2-deployment.yaml  fastapi-app2-service.yaml  fastapi-app3-deployment.yaml  fastapi-app3-service.yaml  fastapi-app4-deployment.yaml  fastapi-app4-service.yaml  fastapi-app5-deployment.yaml  fastapi-app5-service.yaml  fastapi-app6-deployment.yaml  fastapi-app6-service.yaml  fastapi-app7-deployment.yaml  fastapi-app7-service.yaml  fastapi-app8-deployment.yaml  fastapi-app8-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  kafka-deployment.yaml  kafka-service.yaml  kubernetes_run.py  kubernetes_stop.py  loaddatafromAPI.ipynb  (+8 more)
app/: crud.py  (+22 more)
plant_sensor_manager/: README.md  pyproject.toml  run_format_and_lint.sh  send_mock_data.py  test_mock_sensors.py
plant_sensor_manager/connectivity/: kafka_connector.py
plant_sensor_manager/helper_scripts/: plot_sensors.py
plant_sensor_manager/proxy/: board_to_proxy.py  proxy_sensor_sender.py  proxy_to_kafka.py
plant_sensor_manager/sensors/: abc_sensors.py  mock_sensors.py  real_sensors.py  sensors_to_file.py
plant_sensor_manager/systemd_files/: board-to-proxy.service  board-to-proxy.timer
(+66 files in other folders)
